Add separate formulation hierarchy for specializing component formulations
Fixes #11.

--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,5 @@ LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
