--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Destruct = "dde75ccc-4946-507f-85f2-ccadd28c929c"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
