--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
