Fix typos. Remove Requires for now

--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ version = "0.0.2"
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Destruct = "dde75ccc-4946-507f-85f2-ccadd28c929c"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
@@ -17,8 +18,9 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+PowerSystems = "bcd98974-b02a-5e2f-9ee0-a103f5c450dd"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+TimeSeries = "9e3dc215-6440-5c97-bce1-76c03772f85e"
 
 [compat]
 DataFrames = "~0.19"
