--- a/Project.toml
+++ b/Project.toml
@@ -17,8 +17,10 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerSystems = "bcd98974-b02a-5e2f-9ee0-a103f5c450dd"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TimeSeries = "9e3dc215-6440-5c97-bce1-76c03772f85e"
 
